# datacamp_projects

./: README.md  pyproject.toml
clustering_antarctic_penguin_species/: main.ipynb
notes/xgboost/pipeline/: main.ipynb
